# subembed

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  burn_subtitles.sh  install.ps1  install.sh  package.json  wrap_ass_dialogues.js
.agents/skills/npm-oidc-publish/: SKILL.md
.github/workflows/: ci.yml  npm-publish.yml  release.yml
archived/: subembed.sh
docs/: first-release-guide.md
docs/skills/npm-oidc-publish/: SKILL.md
npm/: cli.cjs  postinstall.cjs  prepublish-check.cjs  shared.cjs
src/: cli.rs  config.rs  lib.rs  main.rs  pipeline.rs  platform.rs  subtitle.rs
src/ffmpeg/: managed.rs  mod.rs
tests/: postinstall.test.cjs
