[package]
name = "subembed"
version = "0.1.6"
edition = "2024"
description = "subembed CLI for burning Traditional Chinese subtitles into video"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
unicode-general-category = "1.1.0"
unicode-script = "0.5.7"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "rustls-tls"] }
tar = "0.4.44"
thiserror = "2.0.17"
xz2 = "0.1.7"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }

